re-write providers/sections for better performance, concurrency and implemented a csv provider/section